# humanoid-robot-NAO

./: README.md
Naovid/: CMakeLists.txt  Important comments  Naovid_param.yaml  package.xml
Naovid/launch/: nao.launch  nao_apps.launch
Naovid/script/: animated_speech.py  aruco.py  certificate_check.py  get_joint_position.py  move_head_service.py  move_service.py  stand_up.py  stop_tracker.py  subscribe_audio.py  testcovidapi.py
Naovid/src/: arucomarker.cpp  client.cpp  covid_check.cpp  facedetection.cpp  shirtdetection_standalone.cpp  shirtdetection_visitor.cpp  speech.cpp  teleoperation.cpp
Naovid/srv/: AniSpeech.srv  Aruco.srv  CertificateCheck.srv  MoveHead.srv  MoveJoints.srv  MoveJoints2.srv  Standup.srv
